tests/NormalTests/paczka1/fuzzy1/13154065.err
Error in line 1: slasLLWptS S916 79,9
Error in line 4: A271 A271 73,3
Error in line 5: mW1k4mGG9Y A188 92,0
Error in line 19: jVgpWqUtvL A271 65,7
Error in line 16: 0Xga A271 197,6
Error in line 34: NxFcBL A248 45,6
